# htmlcc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap  configure
doc/public_html/: 404.html  htmlcc.html
libs/: buildit
resources/: mini_html.rsr  sym_test.rsr  test_html.rsr
src/attic/: test_async_http_1.c
src/lib/: bagride2.c  bagride2.h  br_http.c  br_http.h  diru.c  diru.h  favicon.h  hashmap.c  hashmap.h  hxd.h  mmtrace.h  qdirty.h  rsr.h  strcompat.c  strcompat.h  sub0.c  sub0.h
src/lib/bagride2/: bagride2.c  bagride2.h  br_alloc.c  br_alloc.h  br_http.c  br_http.h
src/samples/: CMakeLists.txt  webhello.c
src/samples/presentation/: CMakeLists.txt  main.c
src/samples/presentation/public_html/: 404.html
src/samples/presentation/public_html/css/: 404.css
src/samples/tinycontrol/: CMakeLists.txt  main.c  test_main.c
src/samples/tinycontrol/public_html/: index.html
src/samples/tinycontrol/public_html/css/: 404.css  tinycontrol.css
src/samples/websumup/: CMakeLists.txt  main.c
src/samples/websumup/public_html/: django.html  index.html  jquery.html  python.html
src/samples/websumup/public_html/css/: 404.css  ds.css  yk.css
src/tests/: CMakeLists.txt  test_ahe.c  test_ahe_xxd.c  test_async_http.c  test_embedfile.c  test_hashmap.c  test_http-parser.c  test_http_simple.c  test_recurse_dir.c  test_select.c
src/tools/: embed.c  embedfile.c  embedfile_1.c
